# zerosixty

./: .gitignore  ANALYSIS_BACKLOG.md  README.md  post_mortem.md  pyproject.toml  ruff.toml
datasets-clean/: index.json
datasets-clean/batch_exporter-1776293717906__members-1776293400829/: manifest.json  members.csv  tweets.csv
datasets-clean/batch_exporter-1776296731477__members-1776293400829/: manifest.json  tweets.csv
datasets-clean/batch_exporter-1776380968798__members-1776380931158/: manifest.json  members.csv
datasets-clean/batch_exporter-1776856502784__members-1776856522346/: manifest.json  members.csv
datasets-raw/: twitter-ListMembers-1776293394158.html  twitter-ListMembers-1776293397753.json  twitter-ListMembers-1776293400829.csv  twitter-web-exporter.user.js
outputs/initial_run/: account_overlap.csv  account_summary.csv  hashtag_summary.csv  mention_summary.csv  ml_feature_matrix.csv  network_components.csv  network_nodes.csv  normalized_tweets.csv  report.md  retweet_cascades.csv  retweet_edges.csv  summary.json
outputs/raw-verification/: network_nodes.csv  report.md  summary.json
outputs/reanalysis_1776296731477/: account_overlap.csv  account_summary.csv  hashtag_summary.csv  network_components.csv  summary.json
outputs/reanalysis_1776296731477_v100/: ml_feature_matrix.csv  normalized_tweets.csv  report.md  retweet_cascades.csv  retweet_edges.csv  summary.json
outputs/reanalysis_1776296731477_v101/: mention_summary.csv  ml_accounts.csv  ml_clusters.csv  ml_feature_matrix.csv  report.md  summary.json
outputs/reanalysis_1776380968798_v102/: hashtag_summary.csv  report.md  summary.json
outputs/reanalysis_1776380968798_v103/: account_overlap.csv  ml_feature_matrix.csv  network_components.csv  (+1 more)
tests/: test_analysis.py  test_curation.py  test_intelligence.py  test_loaders.py  test_ml.py  test_normalize.py
(+65 files in other folders)
