[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerosixty"
version = "1.0.1"
description = "Deterministic coordination-analysis pipeline for X/Twitter list exports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "rich>=15.0.0",
  "typer>=0.24.1",
]

[project.optional-dependencies]
ml = [
  "numpy>=2.4.4",
  "scikit-learn>=1.8.0",
]

[project.scripts]
zerosixty = "zerosixty.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.18.1",
  "pytest>=8.4.2",
  "ruff>=0.12.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zerosixty"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
