[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerosixty"
version = "1.0.1"
description = "Deterministic and unsupervised-ML coordination analysis for X/Twitter list exports."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.4.4",
  "rich>=15.0.0",
  "scikit-learn>=1.8.0",
  "typer>=0.24.1",
]

[project.scripts]
zerosixty = "zerosixty.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zerosixty"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
